--- a/.gitignore
+++ b/.gitignore
@@ -41,7 +41,7 @@ accessibility/output/
 qa/pen/results.json
 qa/pen/testreport.html
 qa/accessibility/output/
-reports/*
+qa/results/*
 
 ################
 # End QA Additions
