--- a/analytics/requirements.txt
+++ b/analytics/requirements.txt
@@ -2,3 +2,6 @@ git+https://github.com/behave/behave
 chai==1.1.2
 selenium==3.4.3
 requests==2.18.1
+google-auth==1.0.2
+google-api-python-client==1.6.2
+requests-toolbelt==0.8.0
