--- a/ci_files/.gitlab-ci.yml
+++ b/ci_files/.gitlab-ci.yml
@@ -87,10 +87,9 @@ verify_accessibility:
   services:
   - name: kmturley/lighthouse-ci
   script:
-    - export PYTHONPATH=$PWD/backend/lib:$PYTHONPATH
-    - pip install -r qa/accessibility/requirements.txt
-    - BASE_URL="https://$CI_BUILD_REF_SLUG-dot-$GAE_PROJECT.appspot.com" LIGHTHOUSE_IMAGE="http://kmturley__lighthouse-ci:8085" python qa/accessibility/page_runner.py
-    - BASE_URL="https://$CI_BUILD_REF_SLUG-dot-$GAE_PROJECT.appspot.com" FILE_NAME="index" behave qa/accessibility/features
+      - export PYTHONPATH=$PWD/env:$PYTHONPATH
+      - pip install -r qa/accessibility/requirements.txt
+      - BASE_URL=$GAE_QA_PROJECT_URL LIGHTHOUSE_IMAGE="http://kmturley__lighthouse-ci:8085" python qa/accessibility/page_runner.py
 
 verify_analytics:
   image: python
@@ -98,7 +97,7 @@ verify_analytics:
   services:
     - selenium/standalone-chrome
   script:
-    - export PYTHONPATH=$PWD/backend/lib:$PYTHONPATH
+    - export PYTHONPATH=$PWD/env:$PYTHONPATH
     - pip install -r qa/analytics/requirements.txt
     - BASE_URL="https://$CI_BUILD_REF_SLUG-dot-$GAE_PROJECT.appspot.com" SELENIUM="http://selenium__standalone-chrome:4444/wd/hub" DRIVER=gitlab_chrome behave qa/analytics/features
 
@@ -108,7 +107,7 @@ verify_functionality:
   services:
     - selenium/standalone-chrome
   script:
-    - export PYTHONPATH=$PWD/backend/lib:$PYTHONPATH
+    - export PYTHONPATH=$PWD/env:$PYTHONPATH
     - pip install -r qa/functional/requirements.txt
     - BASE_URL="https://$CI_BUILD_REF_SLUG-dot-$GAE_PROJECT.appspot.com" SELENIUM="http://selenium__standalone-chrome:4444/wd/hub" DRIVER="headless_chrome" behave qa/functional/features
 
@@ -116,7 +115,7 @@ verify_performance:
   image: python:2.7
   stage: verify
   script:
-    - export PYTHONPATH=$PWD/backend/lib:$PYTHONPATH
+    - export PYTHONPATH=$PWD/env:$PYTHONPATH
     - 'if [ -z "$NIGHTLY_TEST" ]; then echo "Skipping performance test." && exit 0; fi'
     - pip install -r qa/performance/requirements.txt
     - locust --host=https://$CI_BUILD_REF_SLUG-dot-$GAE_PROJECT.appspot.com --clients=2 --hatch-rate=1 --num-request=4 --no-web -f qa/performance/locustfile.py
@@ -129,7 +128,7 @@ verify_security:
   - name: owasp/zap2docker-stable
     command: ["zap.sh", "-daemon", "-port", "8080", "-host", "0.0.0.0", "-config", "api.key=0123456789", "-config", "api.addrs.addr.name=.*", "-config", "api.addrs.addr.regex=true", "-config", "scanner.strength=INSANE", "-Xmx1024m"]
   script:
-    - export PYTHONPATH=$PWD/backend/lib:$PYTHONPATH
+    - export PYTHONPATH=$PWD/env:$PYTHONPATH
     - 'if [ -z "$NIGHTLY_TEST" ]; then echo "Skipping security test." && exit 0; fi'
     - pip install -r qa/security/requirements.txt
     - BASE_URL="https://$CI_BUILD_REF_SLUG-dot-$GAE_PROJECT.appspot.com" ZAP_ADDRESS="http://owasp__zap2docker-stable:8080" ZAP_API_KEY=0123456789 python qa/security/zap_scanner.py
@@ -141,6 +140,6 @@ verify_visual:
   services:
     - selenium/standalone-chrome
   script:
-    - export PYTHONPATH=$PWD/backend/lib:$PYTHONPATH
+    - export PYTHONPATH=$PWD/env:$PYTHONPATH
     - pip install -r qa/visual/requirements.txt
     - BASE_URL="https://$CI_BUILD_REF_SLUG-dot-$GAE_PROJECT.appspot.com" SELENIUM="http://selenium__standalone-chrome:4444/wd/hub" API_KEY=$EYES_API_KEY DRIVER="headless_chrome" behave qa/visual/features
