--- a/ci_files/.gitlab-ci.yml
+++ b/ci_files/.gitlab-ci.yml
@@ -99,7 +99,7 @@ verify_analytics:
   script:
     - export PYTHONPATH=$PWD/env:$PYTHONPATH
     - pip install -r qa/analytics/requirements.txt
-    - BASE_URL="https://$CI_BUILD_REF_SLUG-dot-$GAE_PROJECT.appspot.com" SELENIUM="http://selenium__standalone-chrome:4444/wd/hub" DRIVER=gitlab_chrome behave qa/analytics/features
+    - BASE_URL="https://$CI_BUILD_REF_SLUG-dot-$GAE_PROJECT.appspot.com" SELENIUM="http://selenium__standalone-chrome:4444/wd/hub" DRIVER=get_remote_ga_chrome behave qa/analytics/features
 
 verify_functionality:
   image: python
