--- a/ci_files/bitbucket-pipelines.yml
+++ b/ci_files/bitbucket-pipelines.yml
@@ -63,7 +63,7 @@ pipelines:
 
           - echo 'verify_analytics' &&
             pip install -r qa/analytics/requirements.txt &&
-            BASE_URL="http://$BITBUCKET_BRANCH.$BITBUCKET_PROJECT.elasticbeanstalk.com" SELENIUM="http://127.0.0.1:4444/wd/hub" DRIVER=gitlab_chrome behave qa/analytics/features
+            BASE_URL="http://$BITBUCKET_BRANCH.$BITBUCKET_PROJECT.elasticbeanstalk.com" SELENIUM="http://127.0.0.1:4444/wd/hub" DRIVER=get_remote_ga_chrome behave qa/analytics/features
 
           - echo 'verify_functionality' &&
             pip install -r qa/functional/requirements.txt &&
