deleted results folder

--- a/.gitignore
+++ b/.gitignore
@@ -35,14 +35,12 @@ qa/Accounts.py
 qa/secrets.py
 
 # Test Outputs
-security/results.json
-security/testreport.html
-accessibility/output/*
 qa/security/results.json
 qa/security/testreport.html
 qa/accessibility/output/*
 qa/results/*
-
+qa/performance/results/*
+utilities/allure/*
 ################
 # End QA Additions
 ################
