--- a/functional/requirements.txt
+++ b/functional/requirements.txt
@@ -1,4 +1,4 @@
-git+https://github.com/behave/behave
-pyHamcrest==1.9.0
-selenium==3.4.3
+behave==1.2.5
+selenium==3.6.0
 requests==2.18.1
+chai==1.1.2
