--- a/visual/requirements.txt
+++ b/visual/requirements.txt
@@ -1,4 +1,4 @@
 eyes-selenium==3.10.4
-git+https://github.com/behave/behave
-selenium==3.4.3
-pyHamcrest==1.9.0
+behave==1.2.5
+selenium==3.6.0
+chai==1.1.2
