Ton of fixes for stray stuff

--- a/docker-compose-example.yml
+++ b/docker-compose-example.yml
@@ -1,4 +1,4 @@
-version: "2"
+version: "3"
 
 services:
 
@@ -96,19 +96,75 @@ services:
       - qa_network
     ports:
       - "8085:8085"
-  #
-  # functional_tests:
-  #   image: python
+
+  functional_current_chrome:
+    build:
+      context: ./qa
+    depends_on:
+      - selenium_chrome_node
+    environment:
+      BASE_URL: 'https://google.com'
+      DRIVER: 'headless_chrome'
+      SELENIUM: 'http://selenium_hub:4444/wd/hub'
+    volumes:
+      - ./qa/utilities/allure/allure_result_folder:/usr/tmp/qa/utilities/allure/allure_result_folder:rw
+    networks:
+      - qa_network
+    entrypoint: ["behave", "-f", "allure_behave.formatter:AllureFormatter","-o","qa/utilities/allure/allure_result_folder", "./qa/functional/features", "-i", "google"]
+
+  functional_last_chrome:
+    build:
+      context: ./qa
+    depends_on:
+      - selenium_last_chrome_node
+    environment:
+      BASE_URL: 'https://google.com'
+      DRIVER: 'last_headless_chrome'
+      SELENIUM: 'http://selenium_hub:4444/wd/hub'
+    volumes:
+      - ./qa/utilities/allure/allure_result_folder:/usr/tmp/qa/utilities/allure/allure_result_folder:rw
+    networks:
+      - qa_network
+    entrypoint: ["behave", "-f", "allure_behave.formatter:AllureFormatter","-o","qa/utilities/allure/allure_result_folder", "./qa/functional/features", "-i", "google"]
+
+  # functional_current_firefox:
+  #   build:
+  #     context: ./qa
   #   depends_on:
-  #     - selenium_hub
   #     - selenium_firefox_node
   #     - selenium_chrome_node
-  #   # volumes:
-  #   #   - qa/utilities/allure/allure_result_folder:qa/utilities/allure/allure_result_folder
+  #     - selenium_last_firefox_node
+  #     - selenium_last_chrome_node
+  #   environment:
+  #     BASE_URL: 'https://google.com'
+  #     DRIVER: 'remote_firefox'
+  #     SELENIUM: 'http://selenium_hub:4444/wd/hub'
+  #   volumes:
+  #     - ./qa/utilities/allure/allure_result_folder:/usr/tmp/qa/utilities/allure/allure_result_folder:rw
   #   networks:
   #     - qa_network
-  #   command: BASE_URL=https://google.com DRIVER=headless_chrome behave -f allure_behave.formatter:AllureFormatter -o qa/utilities/allure/allure_result_folder ./qa/functional/features
+  #   entrypoint: ["behave", "-f", "allure_behave.formatter:AllureFormatter","-o","qa/utilities/allure/allure_result_folder", "./qa/functional/features", "-i", "google"]
+
+  performance_tests:
+    build:
+      context: ./qa
+    depends_on:
+      - selenium_firefox_node
+      - selenium_chrome_node
+      - selenium_last_firefox_node
+      - selenium_last_chrome_node
+    environment:
+      BASE_URL: 'https://google.com'
+    volumes:
+      - ./qa/utilities/allure/allure_result_folder:/usr/tmp/qa/utilities/allure/allure_result_folder:rw
+    networks:
+      - qa_network
+    entrypoint: ["python3", "qa/performance/runner.py"]
+
 
 networks:
   qa_network:
     driver: bridge
+
+# volumes:
+#   reports-volume
