Runs wait-for-node in bash in docker, but looking for a more elegant solution

--- a/docker-compose-example.yml
+++ b/docker-compose-example.yml
@@ -114,8 +114,12 @@ services:
       - ./qa/utilities/allure/allure_result_folder:/usr/tmp/qa/utilities/allure/allure_result_folder:rw
     networks:
       - qa_network
-    entrypoint: ["/bin/bash;",  ".", "qa/wait-for-node.sh", "chrome:64.0.3282.140", "--", "behave", "-f", "allure_behave.formatter:AllureFormatter","-o","qa/utilities/allure/allure_result_folder", "./qa/functional/features", "-i", "google"]
-
+    # entrypoint: [".", "/usr/tmp/qa/wait-for-node.sh", "chrome:64.0.3282.140", "--selenium_hub=selenium_hub", "--", "behave", "-f", "allure_behave.formatter:AllureFormatter","-o","qa/utilities/allure/allure_result_folder", "./qa/functional/features", "-i", "google"]
+    # entrypoint:
+    #   - /bin/bash
+    #   - . /usr/tmp/qa/wait-for-node.sh chrome:64.0.3282.140 --selenium_hub=selenium_hub -- behave -f allure_behave.formatter:AllureFormatter -o  qa/utilities/allure/allure_result_folder ./qa/functional/features -i google
+    command:
+      bash -c ". /usr/tmp/qa/wait-for-node.sh chrome:64.0.3282.140 --selenium_hub=selenium_hub -- behave -f allure_behave.formatter:AllureFormatter -o  qa/utilities/allure/allure_result_folder ./qa/functional/features -i google"
 
   # functional_last_chrome:
   #   build:
