--- a/docker-compose-example.yml
+++ b/docker-compose-example.yml
@@ -111,78 +111,74 @@ services:
       DRIVER: 'headless_chrome'
       SELENIUM: 'http://selenium_hub:4444/wd/hub'
     volumes:
-      - ./qa/utilities/allure/allure_result_folder:/usr/tmp/qa/utilities/allure/allure_result_folder:rw
+      - ./qa/utilities/allure/allure_result_folder:/usr/tmp/qa/utilities/allure/allure_result_folder:consistent
     networks:
       - qa_network
-    # entrypoint: [".", "/usr/tmp/qa/wait-for-node.sh", "chrome:64.0.3282.140", "--selenium_hub=selenium_hub", "--", "behave", "-f", "allure_behave.formatter:AllureFormatter","-o","qa/utilities/allure/allure_result_folder", "./qa/functional/features", "-i", "google"]
-    # entrypoint:
-    #   - /bin/bash
-    #   - . /usr/tmp/qa/wait-for-node.sh chrome:64.0.3282.140 --selenium_hub=selenium_hub -- behave -f allure_behave.formatter:AllureFormatter -o  qa/utilities/allure/allure_result_folder ./qa/functional/features -i google
     command:
       bash -c ". /usr/tmp/qa/wait-for-node.sh chrome:64.0.3282.140 --selenium_hub=selenium_hub -- behave -f allure_behave.formatter:AllureFormatter -o  qa/utilities/allure/allure_result_folder ./qa/functional/features -i google"
 
-  # functional_last_chrome:
-  #   build:
-  #     context: ./qa
-  #   depends_on:
-  #     - selenium_last_chrome_node
-  #   environment:
-  #     BASE_URL: 'https://google.com'
-  #     DRIVER: 'last_headless_chrome'
-  #     SELENIUM: 'http://selenium_hub:4444/wd/hub'
-  #   volumes:
-  #     - ./qa/utilities/allure/allure_result_folder:/usr/tmp/qa/utilities/allure/allure_result_folder:rw
-  #   networks:
-  #     - qa_network
-  #   entrypoint: ["behave", "-f", "allure_behave.formatter:AllureFormatter","-o","qa/utilities/allure/allure_result_folder", "./qa/functional/features", "-i", "google"]
-  #
-  #
-  # functional_current_firefox:
-  #   build:
-  #     context: ./qa
-  #   depends_on:
-  #     - selenium_firefox_node
-  #   environment:
-  #     BASE_URL: 'https://google.com'
-  #     DRIVER: 'remote_firefox'
-  #     SELENIUM: 'http://selenium_hub:4444/wd/hub'
-  #   volumes:
-  #     - ./qa/utilities/allure/allure_result_folder:/usr/tmp/qa/utilities/allure/allure_result_folder:rw
-  #   networks:
-  #     - qa_network
-  #   entrypoint: ["behave", "-f", "allure_behave.formatter:AllureFormatter","-o","qa/utilities/allure/allure_result_folder", "./qa/functional/features", "-i", "google"]
-  #
-  #
-  # functional_last_firefox:
-  #   build:
-  #     context: ./qa
-  #   depends_on:
-  #     - selenium_last_firefox_node
-  #   environment:
-  #     BASE_URL: 'https://google.com'
-  #     DRIVER: 'last_remote_firefox'
-  #     SELENIUM: 'http://selenium_hub:4444/wd/hub'
-  #   volumes:
-  #     - ./qa/utilities/allure/allure_result_folder:/usr/tmp/qa/utilities/allure/allure_result_folder:rw
-  #   networks:
-  #     - qa_network
-  #   entrypoint: ["behave", "-f", "allure_behave.formatter:AllureFormatter","-o","qa/utilities/allure/allure_result_folder", "./qa/functional/features", "-i", "google"]
-  #
-  #
-  #
-  # performance_tests:
-  #   build:
-  #     context: ./qa
-  #   # depends_on:
-  #     # - build
-  #   environment:
-  #     BASE_URL: 'https://google.com'
-  #   volumes:
-  #     - ./qa/utilities/allure/allure_result_folder:/usr/tmp/qa/utilities/allure/allure_result_folder:rw
-  #   networks:
-  #     - qa_network
-  #   entrypoint: ["python3", "qa/performance/runner.py"]
-  #
+  functional_last_chrome:
+    build:
+      context: ./qa
+    depends_on:
+      - selenium_last_chrome_node
+    environment:
+      BASE_URL: 'https://google.com'
+      DRIVER: 'last_headless_chrome'
+      SELENIUM: 'http://selenium_hub:4444/wd/hub'
+    volumes:
+      - ./qa/utilities/allure/allure_result_folder:/usr/tmp/qa/utilities/allure/allure_result_folder:consistent
+    networks:
+      - qa_network
+    command:
+      bash -c ". /usr/tmp/qa/wait-for-node.sh chrome:63.0.3239 --selenium_hub=selenium_hub -- behave -f allure_behave.formatter:AllureFormatter -o  qa/utilities/allure/allure_result_folder ./qa/functional/features -i google"
+
+
+  functional_current_firefox:
+    build:
+      context: ./qa
+    depends_on:
+      - selenium_firefox_node
+    environment:
+      BASE_URL: 'https://google.com'
+      DRIVER: 'remote_firefox'
+      SELENIUM: 'http://selenium_hub:4444/wd/hub'
+    volumes:
+      - ./qa/utilities/allure/allure_result_folder:/usr/tmp/qa/utilities/allure/allure_result_folder:consistent
+    networks:
+      - qa_network
+    command:
+      bash -c ". /usr/tmp/qa/wait-for-node.sh firefox:58.0.1 --selenium_hub=selenium_hub -- behave -f allure_behave.formatter:AllureFormatter -o  qa/utilities/allure/allure_result_folder ./qa/functional/features -i google"
+
+  functional_last_firefox:
+    build:
+      context: ./qa
+    depends_on:
+      - selenium_last_firefox_node
+    environment:
+      BASE_URL: 'https://google.com'
+      DRIVER: 'last_remote_firefox'
+      SELENIUM: 'http://selenium_hub:4444/wd/hub'
+    volumes:
+      - ./qa/utilities/allure/allure_result_folder:/usr/tmp/qa/utilities/allure/allure_result_folder:consistent
+    networks:
+      - qa_network
+    command:
+      bash -c ". /usr/tmp/qa/wait-for-node.sh firefox:57.0.4 --selenium_hub=selenium_hub -- behave -f allure_behave.formatter:AllureFormatter -o  qa/utilities/allure/allure_result_folder ./qa/functional/features -i google"
+
+  performance_tests:
+    build:
+      context: ./qa
+    # depends_on:
+      # - build
+    environment:
+      BASE_URL: 'https://google.com'
+    volumes:
+      - ./qa/utilities/allure/allure_result_folder:/usr/tmp/qa/utilities/allure/allure_result_folder:consistent
+    networks:
+      - qa_network
+    command: bash -c "python3 qa/performance/runner.py"
+
 
 networks:
   qa_network:
