--- a/docker-compose-example.yml
+++ b/docker-compose-example.yml
@@ -177,7 +177,51 @@ services:
       - ./qa/utilities/allure/allure_result_folder:/usr/tmp/qa/utilities/allure/allure_result_folder:consistent
     networks:
       - qa_network
-    command: bash -c "python3 qa/performance/runner.py"
+    command: bash -c "python3 qa/performance/allure_runner.py"
+
+  visual_current_chrome:
+    build:
+      context: ./qa
+      # depends_on:
+      # - build
+    environment:
+      BASE_URL: 'https://google.com'
+    networks:
+      - qa_network
+    command: bash -c ". /usr/tmp/qa/wait-for-node.sh chrome:64.0.3282.140 --selenium_hub=selenium_hub -- galen test qa/visual/tests/ --config qa/visual/docker_configs/current_remote_chrome.config"
+
+  visual_last_chrome:
+    build:
+      context: ./qa
+    # depends_on:
+      # - build
+    environment:
+      BASE_URL: 'https://google.com'
+    networks:
+      - qa_network
+    command: bash -c ". /usr/tmp/qa/wait-for-node.sh chrome:63.0.3239 --selenium_hub=selenium_hub -- galen test qa/visual/tests/ --config qa/visual/docker_configs/last_remote_chrome.config"
+
+  visual_current_firefox:
+    build:
+      context: ./qa
+    # depends_on:
+      # - build
+    environment:
+      BASE_URL: 'https://google.com'
+    networks:
+      - qa_network
+    command: bash -c ". /usr/tmp/qa/wait-for-node.sh firefox:58.0.1 --selenium_hub=selenium_hub -- galen test qa/visual/tests/ --config qa/visual/docker_configs/current_remote_firefox.config"
+
+  visual_last_firefox:
+    build:
+      context: ./qa
+    # depends_on:
+      # - build
+    environment:
+      BASE_URL: 'https://google.com'
+    networks:
+      - qa_network
+    command: bash -c ". /usr/tmp/qa/wait-for-node.sh firefox:57.0.4 --selenium_hub=selenium_hub -- galen test qa/visual/tests/ --config qa/visual/docker_configs/last_remote_firefox.config"
 
 
 networks:
