update selenium to 3.11

--- a/ci_files/docker-compose.yml
+++ b/ci_files/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       - /usr/src/app/node_modules
 
   selenium:
-    image: selenium/standalone-chrome-debug
+    image: selenium/standalone-chrome:3.11
     networks:
       - backend
     ports:
