Fix a couple test broken by site updates

--- a/.gitignore
+++ b/.gitignore
@@ -36,15 +36,15 @@ qa/secrets.py
 security/results.json
 security/testreport.html
 utilities/allure/allure_result_folder/
-performance/results/*
+performance/results/*.csv
 accessibility/output/*
 qa/security/results.json
 qa/security/testreport.html
 qa/accessibility/output/*
 qa/results/*
-utilities/allure/allure_result_folder/*
-qa/performance/results/*
-qa/utilities/allure/allure_result_folder/
+utilities/allure/allure_results/*.json
+qa/utilities/allure/allure_results/*.json
+qa/performance/results/*.csv
 qa/production.env
 qa/testing.env
 qa/dev.env
